fixed whitespace issueand title-img position on mobile, bootstrap buttons
1. removed the margins from .skill-list in the Skills section. Also adjusted the padding spacing between the .skill-show. created .skill-list on CSS and added padding to it to supplement that of the .skill-show.
2. .title-img position in @mediaquery on mobile adjusted to the width of 400px, centering it.
3. added bootstrap buttons below the .intro in #title in HTML for 'Works' and' Hire me'.

--- a/css/master.css
+++ b/css/master.css
@@ -63,9 +63,14 @@ h1, h2, h3, p {
   /* background: linear-gradient(180deg, #FFBB33 40%, #FF731D); */
 }
 
+.skill-list {
+  margin: 0;
+  padding: 5% 5%;
+}
+
 .skill-show {
-  border: solid black;
-  margin: 7% 7%;
+  border: solid black 0.5px;
+  margin: 5% 3%;
 }
 
 .skill-desc {
@@ -104,5 +109,6 @@ h1, h2, h3, p {
 
   .title-img {
     position: static;
+    max-width: 400px;
   }
 }
